--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-contexify": "^6.0.0",
     "react-dom": "^18.3.1",
     "react-live-clock": "6.1.23-beta",
     "react-router-dom": "^6.24.1",
