--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -43,6 +43,9 @@
       "@routes/*": [
         "./src/routes/*"
       ],
+      "@pdf/*": [
+        "./src/pdf/*"
+      ],
     },
     "baseUrl": "."
   },
