--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.51.15",
     "@tiptap/extension-color": "^2.8.0",
     "@tiptap/extension-heading": "^2.8.0",
+    "@tiptap/extension-placeholder": "^2.8.0",
     "@tiptap/extension-text-style": "^2.8.0",
     "@tiptap/pm": "^2.8.0",
     "@tiptap/react": "^2.8.0",
